--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,6 @@
+<button (click)="getHeroes()">getHeroes</button>
+
+<div *ngIf="messageService.messages.length > 0">
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes" 
@@ -6,5 +9,7 @@
     <span class="badge">{{ hero.id }}</span> {{ hero.name }}
   </li>
 </ul>
+</div>
 
 <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+
