--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -9,7 +9,7 @@
     cursor: pointer;
     position: relative;
     left: 0;
-    background-color: #EEE;
+    background-color: rgb(169, 196, 165);
     margin: .5em;
     padding: .3em 0;
     height: 1.6em;
@@ -21,7 +21,7 @@
     left: .1em;
   }
   .heroes li.selected {
-    background-color: black;
+    background-color: rgb(14, 92, 44);
     color: white;
   }
   .heroes li.selected:hover {
@@ -35,9 +35,9 @@
   .heroes .badge {
     display: inline-block;
     font-size: small;
-    color: white;
+    color: rgb(70, 70, 70);
     padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
+    background-color:#c2ff5f;
     line-height: 1em;
     position: relative;
     left: -1px;
